Fix z-index sorting of overlay bg vs content

--- a/app/styles/module/overlay/_overlay.scss
+++ b/app/styles/module/overlay/_overlay.scss
@@ -10,6 +10,12 @@
 	position: absolute;
 	width: 100%; height: 100%;
 	background: rgba(white, 0.3);
+	z-index: 0;
+}
+
+.overlay-content {
+	position: relative;
+	z-index: 1;
 }
 
 body.overlay-open {
